          applications as Wayland Clients.
        * Refactor Ecore_Evas Wayland code to match changes in 
          Ecore_Wayland

2012-02-29  Jihoon Kim (jihoon)

        * Add ecore_imf_context_input_panel_caps_lock_mode_set/get to set the caps lock mode on the input panel

2012-03-07  ChunEon Park (Hermet)

        * Add ecore_x_illume_clipboard_state_set()
              ecore_x_illume_clipboard_state_get()
              ecore_x_illume_clipboard_geometry_set()
              ecore_x_illume_clipboard_geometry_get()

2012-03-07  Carsten Haitzler (The Rasterman)

        * Add atoms and api for rotation and indicator transparency in
          ecore_x/ecore_evas

2012-03-07  Mike Blumenkrantz (discomfitor/zmike)

        * Add ecore_con_url_status_code_get() to check return code at any time

2012-03-09  Carsten Haitzler (The Rasterman)

	* Fix ecore_thread_feedback_run to work as the documentation and logic tell us.

2012-03-10  Cedric Bail

	* Fix double free at end of execution of Ecore_Thread with feedback.

2012-03-13  Leif Middelschulte (T_UNIX)

        * Fix ecore_x_randr_modes_info_get to not cut off the trailing '\0'
		anymore

2012-03-20  Vincent Torri

        * Rename ecore_win32_window_focus_set() to ecore_win32_window_focus()
	to match ecore_x API.
	* Add ecore_wince_window_focus(), ecore_wince_window_focus_get()
	and ecore_win32_window_focus_get().

2012-03-26  Shinwoo Kim

        * Do not autorepeat Ctrl, Shift, Alt and Win keys on Windows

2012-03-26 Christopher Michael (devilhorns)

	Ecore_Wayland:
	* Add ecore_wl_dpi_get
	* Implement functions for input grab/ungrab
	* Implement setting surface input & opaque regions
	* Implement popup windows
	* Implement ecore_wl_window_transparent_set function
	* Implement function to allow setting Ecore_Wl_Window type.

2012-03-26  Jihoon Kim (jihoon)

        * scim-immodule: fix bug candidate window covers the preedit string when preedit string appears in 2 line.
